--- a/GamesCatalogAPI/appsettings.json
+++ b/GamesCatalogAPI/appsettings.json
@@ -19,5 +19,8 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Default": "Password=db12345;Persist Security Info=True;User ID=sa;Initial Catalog=CatalogoJogos;Data Source=JEANCARLOS-PC\\SQLEXPRESS"
+    }
 }
